# VisionCERES

./: CMakeLists.txt  DeeplabV3.ipynb  README.md  antigo.cpp  antigo_imagens.cpp  antigo_loop.cpp  linhas.h  main.cpp  main1.cpp  main1_imagens.cpp  main1_loop.cpp  main2.cpp  main2_imagens.cpp  main2_loop.cpp  main3.cpp  main3_imagens.cpp  main3_loop.cpp  main4.cpp  main4_imagens.cpp  main4_loop.cpp  main5.cpp  main5_imagens.cpp  main5_loop.cpp  main6_loop.cpp  main_imagens.cpp  main_loop.cpp
Anotacoes/: img.py
TCC- Erick/: DeeplabV3.ipynb  README.md  draw_lines_step.ipynb
Validando Metodos/: data.py  vm.py
arquivos/: 1.txt  58.txt  86.txt
